...

    <string name="options_submit_post">Submit Post</string>

    <string name="options_refresh">Refresh</string>
    <string name="options_refresh_feeds">Refresh Feeds</string>
    <string name="options_refresh_posts">Refresh Posts</string>
    <string name="options_refresh_comments">Refresh Comments</string>

    <string name="options_past">Past Versions</string>
    <string name="options_past_posts">Past Post List Versions</string>
    <string name="options_past_comments">Past Comment List Versions</string>

    <string name="options_sort">Sort</string>
    <string name="options_sort_feeds">Sort Feeds</string>
    <string name="options_sort_posts">Sort Posts</string>
    <string name="options_sort_comments">Sort Comments</string>

    <!-- Main Menu -->

    <string name="mainmenu_feed_discover">Discover</string>
    <string name="mainmenu_feed_following">Following</string>
    <string name="mainmenu_custom">Custom Feed</string>
...
    <string name="dialog_close">Close</string>
    <string name="dialog_cancel">Cancel</string>
	<string name="dialog_apply">Apply</string>
	<string name="dialog_save">Save</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_go">Go</string>

    <!-- Thing Actions -->

    <string name="action_menu_post_title">Post Actions</string>

    <string name="action_like">Like</string>
...
	<string name="inbox_unread_only">Unread Messages Only</string>

	<!-- 2016-07-02 -->
	<string name="pref_behaviour_actions_comment_longclick_key" translatable="false">pref_behaviour_actions_comment_longclick</string>
	<string name="pref_behaviour_actions_comment_longclick_title">Long press</string>

	<string name="no_comments_yet">No comments yet.</string>

	<!-- 2016-07-09 -->
	<string name="pm_send_hint_recipient">Recipient</string>
	<string name="pm_send_hint_subject">Subject</string>
	<string name="pm_send_hint_message_text">Message text</string>

...
	<string name="action_unsubscribe_feed">Unsubscribe from Feed</string>

	<!-- 2017-04-14 -->
	<string name="collapsed_self_post">Self post collapsed</string>

	<!-- 2017-05-08 -->
	<string name="button_next_comment_parent">Next Parent Comment</string>
	<string name="button_prev_comment_parent">Previous Parent Comment</string>

	<string name="pref_appearance_comments_show_floating_toolbar_title">Show navigation buttons over comments</string>
	<string name="pref_appearance_comments_show_floating_toolbar_key" translatable="false">pref_appearance_comments_show_floating_toolbar</string>

	<!--2017-05-08-->
	<string name="download_link_title">Download File</string>
...
