<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of BlueReader.
  ~
  ~ BlueReader is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ BlueReader is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with BlueReader.  If not, see <http://www.gnu.org/licenses/>.
  -->


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:gravity="center"
		  android:padding="25dp">

	<TextView
			android:id="@+id/empty_view_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textAlignment="center"
			android:textSize="18sp"
			android:textColor="?rrSubTextCol"/>

</FrameLayout>

